Making the account disabled in customer registration
