# app/Http/Controllers/ClientsController.php
@@ -57,15 +57,14 @@ class ClientsController extends Controller
      *            mediaType="multipart/form-data",
      *            @OA\Schema(
      *               type="object",
-     *               required={"name","email", "password", "city", "state","address","phone","account_validation"},
+     *               required={"name","email", "password", "city", "state","address","phone"},
      *               @OA\Property(property="name", type="text"),
-     *               @OA\Property(property="email", type="text"),
-     *               @OA\Property(property="password", type="text"),
+     *               @OA\Property(property="email", type="email"),
+     *               @OA\Property(property="password", type="password"),
      *               @OA\Property(property="city", type="text"),
      *               @OA\Property(property="state", type="text"),
      *               @OA\Property(property="address", type="text"),
-     *               @OA\Property(property="phone", type="text"),
-     *               @OA\Property(property="account_validation", type="number"),
+     *               @OA\Property(property="phone", type="text")
      *            ),
      *        ),
      *    ),
