# app/Http/Requests/StoreClientFormRequest.php
@@ -21,15 +21,23 @@ class StoreClientFormRequest extends FormRequest
      */
     public function rules(): array
     {
-        return [
+        $rules = [
             'name' => 'required|min:3|max:100',
-            'email' => 'required|unique:clients,email,',
+            'email' => 'email|required|unique:clients,email,',
             'password' => 'required|min:8|max:15',
             'city' => 'required|min:3|max:50',
             'state' => 'required|min:2|max:2',
             'address' => 'required|max:150',
             'phone' => 'required|min:12|max:12',
         ];
+
+
+        if($this->method == 'PUT'){
+            $rules = [
+                'account_validation' => 'required'
+            ];
+        }
+        return $rules;
     }
 
     public function messages()
@@ -37,6 +45,7 @@ class StoreClientFormRequest extends FormRequest
         return [
             'required' => "O Campo :attribute é obrigatório",
             'email.required' => "O Campo e-mail é obrigatório",
+            'email.email' => "Preencha um e-mail válido",
             'email.unique' => "O campo e-mail já está sendo usado",
             "min" => "O :attribute tem um valor mínimo de :min caractéres a ser preenchido",
             "max" => "O :attribute tem um valor máximo de :max caractéres a ser preenchido",
